[gd_scene load_steps=3 format=3 uid="uid://bciyvj2fxtd2h"]

[ext_resource type="Script" uid="uid://cmss4ac1npdyx" path="res://cards/Card.gd" id="1_f8kgr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.15, 0.75)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.6, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(150, 220)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_card")
script = ExtResource("1_f8kgr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Card Name"
vertical_alignment = 1

[node name="CostLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CardArt" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1

[node name="EffectLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Effect Text"
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
